--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
+    "framer-motion": "^11.0.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "chart.js": "^4.4.1",
     "react-chartjs-2": "^5.2.0",
-    "framer-motion": "^11.0.5",
-    "date-fns": "^3.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/firebase": "^2.4.32",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
